--- a/contact me.html
+++ b/contact me.html
@@ -6,8 +6,47 @@
     <title>Contact me</title>
   </head>
   <body>
-    <h2><strong>my contact details</strong></h2>
-    <label for="Mobile No">mobile No: 9850422403</label><br />
-    <label for="email:khatik@gmail.com">email:abc@gmail.com</label>
+    <h2><strong>Contact me!</strong></h2>
+    <!-- <label for="Mobile No">mobile No: 9850422403</label><br />
+    <label for="email:khatik@gmail.com">email:abc@gmail.com</label> -->
+
+    <form
+      action="mailto:khatikdamini25@gmail.com"
+      method="post"
+      enctype="text/plain"
+    >
+      <label for=""> Your Name:</label>
+      <input type="text" name="name" /><br />
+
+      <label for="">Your Email</label>
+      <input type="email" name="email" /><br />
+      <label for="">Mob No</label>
+      <input type="number" /><br />
+
+      <label for="">Gender</label>
+      <input type="radio" name="gender" />
+      <label for="">female</label>
+      <input type="radio" name="gender" />
+      <label for="">male</label><br />
+
+      <label for="">Purpose :</label><br />
+      <input type="checkbox" />
+      <label for="">bussiness</label><br />
+      <input type="checkbox" />
+      <label for="">partnership</label><br />
+      <input type="checkbox" />
+      <label for="">choching</label><br />
+      <input type="checkbox" />
+      <label for="">teaching</label>
+      <br />
+      <!-- <label for="">passport</label>
+    <input type="file" /><br />
+    <label for="">Password</label>
+    <input type="password" /> -->
+      <label for="">Message :</label><br />
+      <textarea name="message" id="" cols="30" rows="10"></textarea>
+      <br />
+      <input type="submit" />
+    </form>
   </body>
 </html>
